<resources>
    <string name="app_name">Chat App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_create_an_account">Or create an account!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_an_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">next</string>
    <string name="add_room">Add Room</string>
    <string name="home">Home</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="create_new_room">Create New Room</string>
    <string name="enter_room_description">Enter room description</string>
</resources>