<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_add_room">

    <data>

        <variable
            name="vm"
            type="com.example.roomchatapp.ui.addRoom.AddRoomViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_new_room"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/iv_add_room" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_name_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:Error="@{vm.roomNameError}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_room_name"
                        android:text="@={vm.roomName}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_desc_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:Error="@{vm.roomDescError}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_room_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:hint="@string/enter_room_description"
                        android:lines="5"
                        android:text="@={vm.roomDesc}" />
                </com.google.android.material.textfield.TextInputLayout>


                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:onClick="@{()->vm.createRoom()}"
                    android:text="@string/create_new_room"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>